fix blur on safari

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,12 +1,13 @@
 .pageBackground {
-  width: 120vw;
-  height: 120vh;
+  width: 100vw;
+  height: 100vh;
   background-size: cover;
   background-position: center;
   position: fixed;
-  top: -10vh;
-  left: -10vw;
+  top: 0;
+  left: 0;
   z-index: -2;
+  transform: scale(1.5);
 
-  @apply blur-md;
+  @apply blur-md
 }
